Spacing Bug Fixes on Tournaments, MyTournaments, Profile

--- a/public/styles/dashboard_style.css
+++ b/public/styles/dashboard_style.css
@@ -287,7 +287,7 @@ select option{
 }
 
 .myTournamentsHeader{
-  padding-bottom: 30px;
+  padding-bottom: 0px;
 }
 
 .fa-2x {
@@ -598,6 +598,7 @@ text-align: center;
 }
 
 .filterAndSearchbar{
+  height: 40px;
   display: inline-block;
   float: right;
   max-width: 420px;
@@ -1070,12 +1071,12 @@ text-align: center;
 
 #editProfileButton{
   background-image: var(--gradient);
-  visibility: visible;
+  display: inline-block;
 }
 
 #saveProfileButton{
   background-image: linear-gradient(70deg,#36bf70,#12fe7b);
-  visibility: hidden;
+  display: none;
 }
 
 #editPreferencesButton{
